<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">花草集</string>
    <string name="start_page_quote">大\u3000\u3000自\u3000都然\u3000是的\u3000美每\u3000妙一\u3000绝个\u3000伦领\u3000的域</string>
    <string name="start_page_quote_author">亚里士多德</string>
    <string name="start_page_protocol">我已阅读并同意《服务条款》和《隐私协议》</string>
    <string name="start_page_third_part_login">第三方登录</string>
    <string name="menu_home_page">首页</string>
    <string name="menu_note">笔记</string>
    <string name="menu_nearby">附近</string>
    <string name="menu_me">我的</string>
    <string name="info_setting">资料设置</string>
    <string name="user_name">用户昵称</string>
    <string name="user_brief">用户简介</string>
    <string name="setting_complete">完成设置</string>
    <string name="recognition_history">识别历史</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_note">我的笔记</string>
    <string name="retrieve_by_division">按门类检索</string>
    <string name="plants_encyclopedia">植物百科</string>
    <string name="grow_environment">生长环境</string>
    <string name="distribution_range">分布范围</string>
    <string name="main_value">主要价值</string>
    <string name="morphological_characteristics">形态特征</string>
    <string name="class_name">纲</string>
    <string name="door">门</string>
    <string name="family">科</string>
    <string name="category">属</string>
    <string name="seed">种</string>
    <string name="popular_science_today">今日科普</string>
    <string name="plants_appreciation">植物大赏</string>
    <string name="cancel">取消</string>
    <string name="history">历史记录</string>
    <string name="hot_search">热门搜索</string>
    <string name="check_detail">查看详情</string>
    <string name="generate_note">生成笔记</string>
    <string name="similarity">相似度:</string>
    <string name="classification_retrieve">分类检索</string>
    <string name="specimen_retrieve">标本检索</string>
    <string name="annals_retrieve">志书检索</string>
    <string name="my_foot_print">我的足迹</string>
    <string name="management">管理</string>
    <string name="plans">管理</string>
    <string name="latest_edit">最近编辑于</string>
    <string name="recognize_plants">识植物</string>
    <string name="more_function">更多功能</string>
    <string name="safety_manual">安全手册</string>
    <string name="plants_error_report">植物报错</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="version">Version</string>
    <string name="function_intro">功能介绍</string>
    <string name="check_new_version">检查新版本</string>
    <string name="already_latest_version">当前已是最新版本</string>
    <string name="save">保存</string>
    <string name="alias">别名:</string>
    <string name="observation_time">观测时间</string>
    <string name="observation_place">观测地点</string>
    <string name="retrieve_result">检索结果</string>
    <string name="start_retrieve">开始检索</string>
    <string name="touch_to_supplement_note">点击补充笔记</string>
    <string name="plant_classification_index">植物分类检索表</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>